<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    tools:context=".SignInFragment"
    android:padding="16dp">
    <ImageView android:id="@+id/logo"
        android:layout_width="180dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/sdsu_logo" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_mail_outline_black_18dp"
        android:hint="@string/email_hint"
        android:textColorHint="@color/colorAccent"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        android:layout_marginTop="16dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:drawablePadding="10dp"
        android:hint="@string/password_hint"
        android:drawableStart="@drawable/ic_vpn_key_black_18dp"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:textColorHint="@color/colorAccent"
        android:id="@+id/password" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:background="@color/colorPrimary"
        android:id="@+id/button_sign_in"
        android:layout_marginTop="16dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/or"
        android:layout_gravity="center"
        android:id="@+id/or"
        android:layout_marginTop="32dp" />
    <ImageView
        android:id="@+id/google_sign_in"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/action_sign_in"
        android:src="@drawable/btn_google_signin_dark_pressed_web"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_sign_up"
        android:text="@string/newuser"
        android:layout_gravity="center"
        android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_18dp"
        android:textColor="@color/colorAccent"
        style="?android:attr/buttonBarButtonStyle"/>
</LinearLayout>
</ScrollView>