<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/grey"
    app:layout_scrollFlags="scroll"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/jobTitle"
                    style="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/deep_purple"
                    tools:text="Student Assistant" />

                <TextView
                    android:id="@+id/department"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    tools:text="Computer Science" />
            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginTop="4dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/empType" />

                <RadioGroup
                    android:id="@+id/employmentType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <RadioButton
                        android:id="@+id/fullTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fullTime" />

                    <RadioButton
                        android:id="@+id/partTime"
                        android:layout_marginStart="16dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/partTime" />
                </RadioGroup>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold"
                    android:text="@string/workStudyPermission" />

                <RadioGroup
                    android:id="@+id/permit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <RadioButton
                        android:id="@+id/workStudy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yes" />

                    <RadioButton
                        android:id="@+id/nonWorkStudy"
                        android:layout_marginStart="16dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:nextFocusForward="@+id/jobDescription"
                        android:text="@string/no" />
                </RadioGroup>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginTop="4dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp"
                    android:textStyle="bold"
                    android:labelFor="@+id/jobDescription"
                    android:text="@string/description" />
                <EditText
                    android:id="@+id/jobDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/textarea"
                    android:gravity="top|start"
                    android:inputType="textMultiLine"
                    android:lines="6"
                    android:overScrollMode="always"
                    android:scrollHorizontally="false"
                    android:scrollbarStyle="insideInset"
                    android:nextFocusForward="@+id/requiredSkills"
                    android:scrollbars="vertical"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginTop="4dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:textStyle="bold"
                android:text="@string/skillSetLabel" />

            <EditText
                android:id="@+id/requiredSkills"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textarea"
                android:gravity="top|start"
                android:inputType="textMultiLine"
                android:lines="4"
                android:overScrollMode="always"
                android:scrollHorizontally="false"
                android:scrollbarStyle="insideInset"
                android:nextFocusForward="@id/pay"
                android:scrollbars="vertical"
                android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold"
                    android:labelFor="@+id/pay"
                    android:text="@string/pay" />

                <EditText
                    android:id="@+id/pay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white_70"
            android:layout_gravity="end"
            android:orientation="horizontal">
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/cancel_form"
                android:textStyle="bold"
                android:textColor="@color/black"
                style="?android:buttonBarButtonStyle"
                android:text="@string/cancel"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:id="@+id/submit_job"
                android:textColor="@color/black"
                style="?android:buttonBarButtonStyle"
                android:text="@string/submit"/>
        </LinearLayout>


    </LinearLayout>
</ScrollView>