<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sdsu.deepak.campusjobs.ViewSkillsFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:padding="8dp"
        android:orientation="horizontal"
        android:id="@+id/addSkill"
        android:layout_alignParentTop="true"
        android:layout_height="wrap_content">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:focusable="true"
            android:focusableInTouchMode="true"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/addNewSkill"
            android:hint="@string/emptySkills"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:buttonBarButtonStyle"
            android:id="@+id/add"
            android:text="@string/add"
            />

    </LinearLayout>

    <ListView
        android:id="@+id/skills"
        android:layout_width="match_parent"
        android:layout_below="@+id/addSkill"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/saveAllSkills"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:background="@drawable/apply_button_background"
        android:text="@string/save"/>

</RelativeLayout>
