<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sdsu.deepak.campusjobs.EditExperienceDetails">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/experienceLabel"
        android:padding="16dp"
        android:textColor="@color/deep_orange"
        android:textStyle="bold"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:id="@+id/label"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/label"
        android:layout_alignBaseline="@+id/label"
        android:text="@string/add"
        android:textColor="@color/deep_orange"
        android:textStyle="bold"
        android:padding="16dp"
        android:gravity="end"
        style="?android:buttonBarButtonStyle"
        android:id="@+id/addExperience"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/experienceDetailsList"
        android:layout_above="@+id/commit"
        android:layout_marginStart="8dp"
        android:layout_below="@+id/addExperience"/>

    <Button
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:id="@+id/commit"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:background="@drawable/apply_button_background"
        android:text="@string/save"/>

</RelativeLayout>
